--- a/client/less/price.less
+++ b/client/less/price.less
@@ -21,6 +21,8 @@
       display: inline-block;
       height: 25px;
       border-bottom: 1px solid @default-gray;
+      position: absolute;
+      left: 0px;
     }
 
     .title {
@@ -132,7 +134,7 @@
         line-height: 30px;
         position: relative;
         top: -3px;
-        margin-left: 20px;
+        margin-left: 10px;
       }
 
     }
@@ -180,7 +182,7 @@
 
       li {
         min-width: 120px;
-        width: 11.78%;
+        width: 11.75%;
         margin: 0 0.2%;
         height: 160px;
         display: inline-block;
