--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,9 +1,9 @@
 <header>
     <div class="inner">
-        <a class="topbar-logo col-md-2" href="/">
+        <a class="topbar-logo" href="/">
             <img src="./images/index/logo.png" alt=""/>
         </a>
-        <div class="topbar-nav col-md-8">
+        <div class="topbar-nav">
             <a href="/">首页</a>
             <a>iPhone7/7P</a>
             <a>iPhone6/6sP</a>
@@ -16,7 +16,7 @@
             <a href="/news">苹果咨询</a>
             <a>苹果视频</a>
         </div>
-        <div class="topbar-info col-md-2">
+        <div class="topbar-info">
             <a class="header-search">
                 <img src="./images/common/search-icon.png">
             </a>
@@ -51,3 +51,5 @@
         </a>
     </div>
 </header>
+
+<div class="clearfix"></div>
