--- a/views/update.hbs
+++ b/views/update.hbs
@@ -4,10 +4,36 @@
 
 <div class="content">
     <div class="inner">
+        <ul class="up-ul">
+            <li class="up-il">
+                <p class="up-title">
+                    iPhone更新周期
+                    <a href="#">more +</a>
+                </p>
+                <div class="up-info">
+                    <div class="up-img">
+                        <img src="./images/update/iphones.png" alt="">
+                    </div>
+                    <div class="up-msg">
+                        <p class="up-msg-title">iPhone</p>
+                        <div class="up-button">
+                            <span>刚刚更新</span>
+                            现在可以买
+                        </div>
+                        <p class="up-msg-info">iPhone 7和7 Plus是苹果最新的iPhone，具有显着的相机改进，新的有光泽的黑色，更好的电池寿命，更快的处理器，并通过无点击触摸主页按钮，没有耳机插孔提高防水性。 新的iPhones于2016年9月16日推出。</p>
+                    </div>
+                </div>
+                <div class="up-progress">
+                    最近一次发布距离现在
+                    <span class="up-date">2016.09</span>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:40%;">
+                        </div>
+                    </div>
+                    <span class="up-count">134</span>
+                </div>
 
+            </li>
+        </ul>
     </div>
 </div>
-
-<script>
-
-</script>
