--- a/views/news.hbs
+++ b/views/news.hbs
@@ -3,42 +3,42 @@
 {{/extend}}
 
 <div class="news-nav">
-    <span class="news-nav-items">
+    <div class="news-nav-items">
         <a class="news-icon" href="#">
             <img src="./images/news/icon-date.png" alt="" />
         </a>
         <span>最新推荐</span>
-    </span>
-    <span class="news-nav-items">
+    </div>
+    <div class="news-nav-items">
         <a class="news-icon" href="#">
             <img src="./images/news/icon-ios.png" alt="" />
         </a>
         <span>iPhone8的小道消息</span>
-    </span>
-    <span class="news-nav-items">
+    </div>
+    <div class="news-nav-items">
         <a class="news-icon" href="#">
             <img src="./images/news/icon-survey.png" alt="" />
         </a>
         <span>热门排行</span>
-    </span>
-    <span class="news-nav-items">
+    </div>
+    <div class="news-nav-items">
         <a class="news-icon" href="#">
             <img src="./images/news/icon-phone.png" alt="" />
         </a>
         <span>iPhone</span>
-    </span>
-    <span class="news-nav-items">
+    </div>
+    <div class="news-nav-items">
         <a class="news-icon" href="#">
             <img src="./images/news/icon-pad.png" alt="" />
         </a>
         <span>iPad</span>
-    </span>
-    <span class="news-nav-items">
+    </div>
+    <div class="news-nav-items">
         <a class="news-icon" href="#">
             <img src="./images/news/icon-mac.png" alt="" />
         </a>
         <span>Mac</span>
-    </span>
+    </div>
 </div>
 
 <div class="clearfix"></div>
