--- a/views/update.hbs
+++ b/views/update.hbs
@@ -1,39 +1,262 @@
 {{#extend "stylesheets"}}
-    <link rel="stylesheet/less" type="text/css" href="/less/update.less"/>
+	<link rel="stylesheet/less" type="text/css" href="/less/update.less"/>
 {{/extend}}
 
 <div class="content">
-    <div class="inner">
-        <ul class="up-ul">
-            <li class="up-il">
-                <p class="up-title">
-                    iPhone更新周期
-                    <a href="#">more +</a>
-                </p>
-                <div class="up-info">
-                    <div class="up-img">
-                        <img src="./images/update/iphones.png" alt="">
-                    </div>
-                    <div class="up-msg">
-                        <p class="up-msg-title">iPhone</p>
-                        <div class="up-button">
-                            <span>刚刚更新</span>
-                            现在可以买
-                        </div>
-                        <p class="up-msg-info">iPhone 7和7 Plus是苹果最新的iPhone，具有显着的相机改进，新的有光泽的黑色，更好的电池寿命，更快的处理器，并通过无点击触摸主页按钮，没有耳机插孔提高防水性。 新的iPhones于2016年9月16日推出。</p>
-                    </div>
-                </div>
-                <div class="up-progress">
-                    最近一次发布距离现在
-                    <span class="up-date">2016.09</span>
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:40%;">
-                        </div>
-                    </div>
-                    <span class="up-count">134</span>
-                </div>
-
-            </li>
-        </ul>
-    </div>
+	<div class="inner">
+		<ul class="up-ul">
+			<li class="up-il">
+				<p class="up-title">iPhone更新周期<a href="#">more +</a></p>
+				<div class="up-info">
+					<div class="up-img">
+						<img src="./images/update/iphones.png" alt="">
+					</div>
+					<div class="up-msg">
+						<p class="up-msg-title">iPhone</p>
+						<div class="up-button">
+							<span>刚刚更新</span>
+							现在可以买
+						</div>
+						<p class="up-msg-info">iPhone 7和7 Plus是苹果最新的iPhone，具有显着的相机改进，新的有光泽的黑色，更好的电池寿命，更快的处理器，并通过无点击触摸主页按钮，没有耳机插孔提高防水性。 新的iPhones于2016年9月16日推出。</p>
+					</div>
+				</div>
+				<div class="up-progress">
+					最近一次发布距离现在
+					<span class="up-date">2016.09</span>
+					<div class="progress">
+						<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:40%;"></div>
+					</div>
+					<span class="up-count">134</span>
+				</div>
+				<div class="up-progress progress-coverage">
+					平均发布新品周期
+					<div class="progress">
+						<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:60%;"></div>
+					</div>
+					<span class="up-count count-coverage">378</span>
+				</div>
+				<div class="up-history">
+					发布历史
+					<ul class="up-history-ul">
+						<li class="up-history-li"><a href="">2015年9月15号发布 iphone6s/6sp等 <span>365天</span></a></li>
+						<li class="up-history-li"><a href="">2015年9月15号发布 iphone6s/6sp等 <span>365天</span></a></li>
+						<li class="up-history-li"><a href="">2015年9月15号发布 iphone6s/6sp等 <span>365天</span></a></li>
+						<li class="up-history-li"><a href="">2015年9月15号发布 iphone6s/6sp等 <span>365天</span></a></li>
+						<li class="up-history-li"><a href="">2015年9月15号发布 iphone6s/6sp等 <span>365天</span></a></li>
+						<li class="up-history-li"><a href="">2015年9月15号发布 iphone6s/6sp等 <span>365天</span></a></li>
+					</ul>
+				</div>
+			</li>
+			<li class="up-il">
+				<p class="up-title">iPad更新周期<a href="#">more +</a></p>
+				<div class="up-info">
+					<div class="up-img">
+						<img src="./images/update/iphones.png" alt="">
+					</div>
+					<div class="up-msg">
+						<p class="up-msg-title">iPhone</p>
+						<div class="up-button">
+							<span>刚刚更新</span>
+							现在可以买
+						</div>
+						<p class="up-msg-info">iPhone 7和7 Plus是苹果最新的iPhone，具有显着的相机改进，新的有光泽的黑色，更好的电池寿命，更快的处理器，并通过无点击触摸主页按钮，没有耳机插孔提高防水性。 新的iPhones于2016年9月16日推出。</p>
+					</div>
+				</div>
+				<div class="up-progress">
+					最近一次发布距离现在
+					<span class="up-date">2016.09</span>
+					<div class="progress">
+						<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:40%;"></div>
+					</div>
+					<span class="up-count">134</span>
+				</div>
+				<div class="up-progress progress-coverage">
+					平均发布新品周期
+					<div class="progress">
+						<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:60%;"></div>
+					</div>
+					<span class="up-count count-coverage">378</span>
+				</div>
+				<div class="up-history">
+					发布历史
+					<ul class="up-history-ul">
+						<li class="up-history-li"><a href="">2015年9月15号发布 iphone6s/6sp等 <span>365天</span></a></li>
+						<li class="up-history-li"><a href="">2015年9月15号发布 iphone6s/6sp等 <span>365天</span></a></li>
+						<li class="up-history-li"><a href="">2015年9月15号发布 iphone6s/6sp等 <span>365天</span></a></li>
+						<li class="up-history-li"><a href="">2015年9月15号发布 iphone6s/6sp等 <span>365天</span></a></li>
+						<li class="up-history-li"><a href="">2015年9月15号发布 iphone6s/6sp等 <span>365天</span></a></li>
+						<li class="up-history-li"><a href="">2015年9月15号发布 iphone6s/6sp等 <span>365天</span></a></li>
+					</ul>
+				</div>
+			</li>
+			<li class="up-il">
+				<p class="up-title">iPad Mini更新周期<a href="#">more +</a></p>
+				<div class="up-info">
+					<div class="up-img">
+						<img src="./images/update/iphones.png" alt="">
+					</div>
+					<div class="up-msg">
+						<p class="up-msg-title">iPhone</p>
+						<div class="up-button">
+							<span>刚刚更新</span>
+							现在可以买
+						</div>
+						<p class="up-msg-info">iPhone 7和7 Plus是苹果最新的iPhone，具有显着的相机改进，新的有光泽的黑色，更好的电池寿命，更快的处理器，并通过无点击触摸主页按钮，没有耳机插孔提高防水性。 新的iPhones于2016年9月16日推出。</p>
+					</div>
+				</div>
+				<div class="up-progress">
+					最近一次发布距离现在
+					<span class="up-date">2016.09</span>
+					<div class="progress">
+						<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:40%;"></div>
+					</div>
+					<span class="up-count">134</span>
+				</div>
+				<div class="up-progress progress-coverage">
+					平均发布新品周期
+					<div class="progress">
+						<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:60%;"></div>
+					</div>
+					<span class="up-count count-coverage">378</span>
+				</div>
+				<div class="up-history">
+					发布历史
+					<ul class="up-history-ul">
+						<li class="up-history-li"><a href="">2015年9月15号发布 iphone6s/6sp等 <span>365天</span></a></li>
+						<li class="up-history-li"><a href="">2015年9月15号发布 iphone6s/6sp等 <span>365天</span></a></li>
+						<li class="up-history-li"><a href="">2015年9月15号发布 iphone6s/6sp等 <span>365天</span></a></li>
+						<li class="up-history-li"><a href="">2015年9月15号发布 iphone6s/6sp等 <span>365天</span></a></li>
+						<li class="up-history-li"><a href="">2015年9月15号发布 iphone6s/6sp等 <span>365天</span></a></li>
+						<li class="up-history-li"><a href="">2015年9月15号发布 iphone6s/6sp等 <span>365天</span></a></li>
+					</ul>
+				</div>
+			</li>
+			<li class="up-il">
+				<p class="up-title">Macbook更新周期<a href="#">more +</a></p>
+				<div class="up-info">
+					<div class="up-img">
+						<img src="./images/update/iphones.png" alt="">
+					</div>
+					<div class="up-msg">
+						<p class="up-msg-title">iPhone</p>
+						<div class="up-button">
+							<span>刚刚更新</span>
+							现在可以买
+						</div>
+						<p class="up-msg-info">iPhone 7和7 Plus是苹果最新的iPhone，具有显着的相机改进，新的有光泽的黑色，更好的电池寿命，更快的处理器，并通过无点击触摸主页按钮，没有耳机插孔提高防水性。 新的iPhones于2016年9月16日推出。</p>
+					</div>
+				</div>
+				<div class="up-progress">
+					最近一次发布距离现在
+					<span class="up-date">2016.09</span>
+					<div class="progress">
+						<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:40%;"></div>
+					</div>
+					<span class="up-count">134</span>
+				</div>
+				<div class="up-progress progress-coverage">
+					平均发布新品周期
+					<div class="progress">
+						<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:60%;"></div>
+					</div>
+					<span class="up-count count-coverage">378</span>
+				</div>
+				<div class="up-history">
+					发布历史
+					<ul class="up-history-ul">
+						<li class="up-history-li"><a href="">2015年9月15号发布 iphone6s/6sp等 <span>365天</span></a></li>
+						<li class="up-history-li"><a href="">2015年9月15号发布 iphone6s/6sp等 <span>365天</span></a></li>
+						<li class="up-history-li"><a href="">2015年9月15号发布 iphone6s/6sp等 <span>365天</span></a></li>
+						<li class="up-history-li"><a href="">2015年9月15号发布 iphone6s/6sp等 <span>365天</span></a></li>
+						<li class="up-history-li"><a href="">2015年9月15号发布 iphone6s/6sp等 <span>365天</span></a></li>
+						<li class="up-history-li"><a href="">2015年9月15号发布 iphone6s/6sp等 <span>365天</span></a></li>
+					</ul>
+				</div>
+			</li>
+			<li class="up-il">
+				<p class="up-title">Macbook Air更新周期<a href="#">more +</a></p>
+				<div class="up-info">
+					<div class="up-img">
+						<img src="./images/update/iphones.png" alt="">
+					</div>
+					<div class="up-msg">
+						<p class="up-msg-title">iPhone</p>
+						<div class="up-button">
+							<span>刚刚更新</span>
+							现在可以买
+						</div>
+						<p class="up-msg-info">iPhone 7和7 Plus是苹果最新的iPhone，具有显着的相机改进，新的有光泽的黑色，更好的电池寿命，更快的处理器，并通过无点击触摸主页按钮，没有耳机插孔提高防水性。 新的iPhones于2016年9月16日推出。</p>
+					</div>
+				</div>
+				<div class="up-progress">
+					最近一次发布距离现在
+					<span class="up-date">2016.09</span>
+					<div class="progress">
+						<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:40%;"></div>
+					</div>
+					<span class="up-count">134</span>
+				</div>
+				<div class="up-progress progress-coverage">
+					平均发布新品周期
+					<div class="progress">
+						<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:60%;"></div>
+					</div>
+					<span class="up-count count-coverage">378</span>
+				</div>
+				<div class="up-history">
+					发布历史
+					<ul class="up-history-ul">
+						<li class="up-history-li"><a href="">2015年9月15号发布 iphone6s/6sp等 <span>365天</span></a></li>
+						<li class="up-history-li"><a href="">2015年9月15号发布 iphone6s/6sp等 <span>365天</span></a></li>
+						<li class="up-history-li"><a href="">2015年9月15号发布 iphone6s/6sp等 <span>365天</span></a></li>
+						<li class="up-history-li"><a href="">2015年9月15号发布 iphone6s/6sp等 <span>365天</span></a></li>
+						<li class="up-history-li"><a href="">2015年9月15号发布 iphone6s/6sp等 <span>365天</span></a></li>
+						<li class="up-history-li"><a href="">2015年9月15号发布 iphone6s/6sp等 <span>365天</span></a></li>
+					</ul>
+				</div>
+			</li>
+			<li class="up-il">
+				<p class="up-title">Macbook Pro更新周期<a href="#">more +</a></p>
+				<div class="up-info">
+					<div class="up-img">
+						<img src="./images/update/iphones.png" alt="">
+					</div>
+					<div class="up-msg">
+						<p class="up-msg-title">iPhone</p>
+						<div class="up-button">
+							<span>刚刚更新</span>
+							现在可以买
+						</div>
+						<p class="up-msg-info">iPhone 7和7 Plus是苹果最新的iPhone，具有显着的相机改进，新的有光泽的黑色，更好的电池寿命，更快的处理器，并通过无点击触摸主页按钮，没有耳机插孔提高防水性。 新的iPhones于2016年9月16日推出。</p>
+					</div>
+				</div>
+				<div class="up-progress">
+					最近一次发布距离现在
+					<span class="up-date">2016.09</span>
+					<div class="progress">
+						<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:40%;"></div>
+					</div>
+					<span class="up-count">134</span>
+				</div>
+				<div class="up-progress progress-coverage">
+					平均发布新品周期
+					<div class="progress">
+						<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:60%;"></div>
+					</div>
+					<span class="up-count count-coverage">378</span>
+				</div>
+				<div class="up-history">
+					发布历史
+					<ul class="up-history-ul">
+						<li class="up-history-li"><a href="">2015年9月15号发布 iphone6s/6sp等 <span>365天</span></a></li>
+						<li class="up-history-li"><a href="">2015年9月15号发布 iphone6s/6sp等 <span>365天</span></a></li>
+						<li class="up-history-li"><a href="">2015年9月15号发布 iphone6s/6sp等 <span>365天</span></a></li>
+						<li class="up-history-li"><a href="">2015年9月15号发布 iphone6s/6sp等 <span>365天</span></a></li>
+						<li class="up-history-li"><a href="">2015年9月15号发布 iphone6s/6sp等 <span>365天</span></a></li>
+						<li class="up-history-li"><a href="">2015年9月15号发布 iphone6s/6sp等 <span>365天</span></a></li>
+					</ul>
+				</div>
+			</li>
+		</ul>
+	</div>
 </div>
