--- a/client/less/update.less
+++ b/client/less/update.less
@@ -1,139 +1,214 @@
 @import "./common.less";
 
 .up-ul {
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  height: 800px;
 
-  .up-il {
-    display: inline-block;
-    width: 46%;
-    margin: 30px 3%;
-    float: left;
+	width: 100%;
+	margin: 0;
+	padding: 0;
 
-    &:nth-child(odd) {
-      margin-left: 0;
-    }
+	.up-il {
 
-    &:nth-child(even) {
-      margin-right: 0;
-    }
+		display: inline-block;
+		width: 46%;
+		margin: 30px 3%;
+		float: left;
 
-    .up-title {
-      border-left: 3px solid #000;
-      height: 25px;
-      font-size: 22px;
-      line-height: 25px;
-      font-family: tx;
-      padding-left: 8px;
-      position: relative;
-      margin-bottom: 25px;
+		&:nth-child(odd) {
+			margin-left: 0;
+		}
 
-      a {
-        display: inline-block;
-        position: absolute;
-        font-size: 14px;
-        line-height: 14px;
-        height: 14px;
-        color: #777;
-        text-transform: uppercase;
-        right: 0;
-        top: 6px;
-      }
-    }
+		&:nth-child(even) {
+			margin-right: 0;
+		}
 
-    .up-info {
-      width: 100%;
-      height: 180px;
-      border-bottom: 1px solid @default-gray;
+		.up-title {
+			border-left: 3px solid #000;
+			height: 25px;
+			font-size: 22px;
+			line-height: 25px;
+			font-family: tx;
+			padding-left: 8px;
+			position: relative;
+			margin-bottom: 25px;
 
-      .up-img {
-        display: inline-block;
-        width: 35%;
-        min-width: 158px;
-        height: 145px;
-        float: left;
+			a {
+				display: inline-block;
+				position: absolute;
+				font-size: 14px;
+				line-height: 14px;
+				height: 14px;
+				color: #777;
+				text-transform: uppercase;
+				right: 0;
+				top: 6px;
 
-        img {
-          width: 100%;
-          height: 100%;
-        }
-      }
+				&:hover {
+					color: @default-yellow;
+				}
+			}
+		}
 
-      .up-msg {
-        float: right;
-        width: 60%;
-        height: 100%;
+		.up-info {
+			width: 100%;
+			height: 180px;
+			border-bottom: 1px solid @default-gray;
 
-        .up-msg-title {
-          font-size: 24px;
-          margin-bottom: 10px;
-        }
+			.up-img {
+				display: inline-block;
+				width: 35%;
+				min-width: 158px;
+				height: 145px;
+				float: left;
 
-        .up-button {
-          display: inline-block;
-          padding: 0 15px 0 0;
-          border: 1px solid @default-yellow;
-          background: #fff;
-          color: #000;
-          border-radius: 4px;
-          margin-bottom: 10px;
+				img {
+					width: 100%;
+					height: 100%;
+				}
+			}
 
-          span {
-            background: @default-yellow;
-            display: inline-block;
-            padding: 0 15px;
-            color: #fff;
-            font-weight: bold;
-            margin-right: 10px;
-          }
-        }
+			.up-msg {
+				float: right;
+				width: 60%;
+				height: 100%;
 
-        .up-msg-info {
-          font-size: 12px;
-          color: #777;
-        }
-      }
-    }
+				.up-msg-title {
+					font-size: 24px;
+					margin-bottom: 10px;
+				}
 
-    .up-progress {
-      width: 100%;
-      height: 60px;
-      border-bottom: 1px solid #ccc;
-      color: #555;
-      line-height: 48px;
-      position: relative;
+				.up-button {
+					display: inline-block;
+					padding: 0 15px 0 0;
+					border: 1px solid @default-yellow;
+					background: #fff;
+					color: #000;
+					border-radius: 4px;
+					margin-bottom: 10px;
 
-      .up-date {
-        font-size: 14px;
-        position: absolute;
-        margin: 0;
-        padding: 0;
-        top: -6px;
-        left: 39%;
-        height: 14px;
-      }
+					span {
+						background: @default-yellow;
+						display: inline-block;
+						padding: 0 15px;
+						color: #fff;
+						font-weight: bold;
+						margin-right: 10px;
+					}
+				}
 
-      .progress {
-        width: 50%;
-        height: 8px;
-        display: inline-block;
-        position: absolute;
-        top: 33px;
-        right: 55px;
+				.up-msg-info {
+					font-size: 12px;
+					color: #777;
+				}
+			}
+		}
 
-        .progress-bar {
-          background-color: @default-yellow;
-          border-radius: 10px;
-        }
-      }
+		.up-progress {
+			width: 100%;
+			height: 55px;
+			border-bottom: 1px solid #ccc;
+			color: #555;
+			line-height: 48px;
+			position: relative;
 
-      .up-count {
-        float: right;
-        color: @default-yellow;
-        font-size: 30px;
-      }
-    }
-  }
+			&:hover {
+				.progress .progress-bar {
+					background-color: @default-yellow;
+				}
+
+				.up-count {
+					color: @default-yellow;
+				}
+			}
+
+			.up-date {
+				font-size: 14px;
+				position: absolute;
+				margin: 0;
+				padding: 0;
+				top: -6px;
+				left: 38%;
+				height: 14px;
+			}
+
+			.progress {
+				width: 50%;
+				height: 8px;
+				display: inline-block;
+				position: absolute;
+				top: 30px;
+				right: 60px;
+
+				.progress-bar {
+					background-color: #808080;
+					border-radius: 10px;
+				}
+			}
+
+			.up-count {
+				float: right;
+				color: #555;
+				font-size: 30px;
+			}
+
+			.count-coverage {
+				font-size: 22px;
+			}
+		}
+
+		.progress-coverage {
+			line-height: 55px;
+		}
+
+		.up-history {
+			width: 100%;
+			height: 160px;
+			line-height: 55px;
+
+			.up-history-ul {
+				width: 60%;
+				float: right;
+				margin: 10px 0 0 0;
+				padding: 0;
+
+				.up-history-li {
+					padding: 0;
+					margin: 0;
+					width: 100%;
+					display: inline-block;
+					height: 32px;
+					line-height: 32px;
+					border-bottom: 1px solid @default-gray;
+
+					a {
+						display: inline-block;
+
+						&:hover {
+							color: @default-yellow;
+						}
+					}
+
+					span {
+						margin-left: 22px;
+					}
+				}
+			}
+		}
+	}
+}
+
+@media (min-width: @screen-xs) and (max-width: 980px){
+	.up-ul .up-il {
+		width: 100%;
+
+		.up-info {
+			.up-img {
+				width: 25%;
+				height: 155px;
+			}
+
+			.up-msg {
+				width: 70%;
+			}
+		}
+	}
 }
