--- a/views/update.hbs
+++ b/views/update.hbs
@@ -258,5 +258,51 @@
 				</div>
 			</li>
 		</ul>
+		<div class="up-tabs">
+			<div class="up-tabs-top">
+				<a class="up-link-top" href="">
+					<span class="up-circle"></span>
+					热门<span class="up-x"><img src="./images/update/x.png" alt="" /></span>专题
+				</a>
+				<a class="up-link-top" href="">
+					<span class="up-circle"></span>
+					苹果的相关资讯
+				</a>
+				<a class="up-link-top" href="">
+					<span class="up-circle"></span>
+					苹果的相关资讯
+				</a>
+			</div>
+			<div class="up-tabs-bottom">
+				<a class="up-bottom-link" href="">
+					iphone8猜想
+				</a>
+				<a class="up-bottom-link" href="">
+					iphone8猜想
+				</a>
+				<a class="up-bottom-link" href="">
+					iphone8猜想
+				</a>
+				<a class="up-bottom-link" href="">
+					iphone8猜想
+				</a>
+				<a class="up-bottom-link" href="">
+					iphone8猜想
+				</a>
+				<a class="up-bottom-link" href="">
+					iphone8猜想
+				</a>
+				<a class="up-bottom-link" href="">
+					iphone8猜想
+				</a>
+				<a class="up-bottom-link" href="">
+					iphone8猜想
+				</a>
+				<a class="up-bottom-link" href="">
+					iphone8猜想
+				</a>
+			</div>
+		</div>
 	</div>
+	<div class="up-bg"></div>
 </div>
