--- a/client/less/update.less
+++ b/client/less/update.less
@@ -1,203 +1,292 @@
 @import "./common.less";
 
-.up-ul {
+#apple {
+	position: relative;
 
-	width: 100%;
-	margin: 0;
-	padding: 0;
+	.up-ul {
 
-	.up-il {
+		width: 100%;
+		margin: 0;
+		padding: 0;
 
-		display: inline-block;
-		width: 46%;
-		margin: 30px 3%;
-		float: left;
+		.up-il {
 
-		&:nth-child(odd) {
-			margin-left: 0;
-		}
+			display: inline-block;
+			width: 46%;
+			margin: 30px 3%;
+			float: left;
 
-		&:nth-child(even) {
-			margin-right: 0;
-		}
-
-		.up-title {
-			border-left: 3px solid #000;
-			height: 25px;
-			font-size: 22px;
-			line-height: 25px;
-			font-family: tx;
-			padding-left: 8px;
-			position: relative;
-			margin-bottom: 25px;
-
-			a {
-				display: inline-block;
-				position: absolute;
-				font-size: 14px;
-				line-height: 14px;
-				height: 14px;
-				color: #777;
-				text-transform: uppercase;
-				right: 0;
-				top: 6px;
-
-				&:hover {
-					color: @default-yellow;
-				}
-			}
-		}
-
-		.up-info {
-			width: 100%;
-			height: 180px;
-			border-bottom: 1px solid @default-gray;
-
-			.up-img {
-				display: inline-block;
-				width: 35%;
-				min-width: 158px;
-				height: 145px;
-				float: left;
-
-				img {
-					width: 100%;
-					height: 100%;
-				}
+			&:nth-child(odd) {
+				margin-left: 0;
 			}
 
-			.up-msg {
-				float: right;
-				width: 60%;
-				height: 100%;
+			&:nth-child(even) {
+				margin-right: 0;
+			}
 
-				.up-msg-title {
-					font-size: 24px;
-					margin-bottom: 10px;
-				}
+			.up-title {
+				border-left: 3px solid #000;
+				height: 25px;
+				font-size: 22px;
+				line-height: 25px;
+				font-family: tx;
+				padding-left: 8px;
+				position: relative;
+				margin-bottom: 25px;
 
-				.up-button {
+				a {
 					display: inline-block;
-					padding: 0 15px 0 0;
-					border: 1px solid @default-yellow;
-					background: #fff;
-					color: #000;
-					border-radius: 4px;
-					margin-bottom: 10px;
+					position: absolute;
+					font-size: 14px;
+					line-height: 14px;
+					height: 14px;
+					color: #777;
+					text-transform: uppercase;
+					right: 0;
+					top: 6px;
 
-					span {
-						background: @default-yellow;
-						display: inline-block;
-						padding: 0 15px;
-						color: #fff;
-						font-weight: bold;
-						margin-right: 10px;
+					&:hover {
+						color: @default-yellow;
+					}
+				}
+			}
+
+			.up-info {
+				width: 100%;
+				height: 180px;
+				border-bottom: 1px solid @default-gray;
+
+				.up-img {
+					display: inline-block;
+					width: 35%;
+					min-width: 158px;
+					height: 145px;
+					float: left;
+
+					img {
+						width: 100%;
+						height: 100%;
 					}
 				}
 
-				.up-msg-info {
-					font-size: 12px;
-					color: #777;
-				}
-			}
-		}
+				.up-msg {
+					float: right;
+					width: 60%;
+					height: 100%;
 
-		.up-progress {
-			width: 100%;
-			height: 55px;
-			border-bottom: 1px solid #ccc;
-			color: #555;
-			line-height: 48px;
-			position: relative;
+					.up-msg-title {
+						font-size: 24px;
+						margin-bottom: 10px;
+					}
 
-			&:hover {
-				.progress .progress-bar {
-					background-color: @default-yellow;
-				}
-
-				.up-count {
-					color: @default-yellow;
-				}
-			}
-
-			.up-date {
-				font-size: 14px;
-				position: absolute;
-				margin: 0;
-				padding: 0;
-				top: -6px;
-				left: 38%;
-				height: 14px;
-			}
-
-			.progress {
-				width: 50%;
-				height: 8px;
-				display: inline-block;
-				position: absolute;
-				top: 30px;
-				right: 60px;
-
-				.progress-bar {
-					background-color: #808080;
-					border-radius: 10px;
-				}
-			}
-
-			.up-count {
-				float: right;
-				color: #555;
-				font-size: 30px;
-			}
-
-			.count-coverage {
-				font-size: 22px;
-			}
-		}
-
-		.progress-coverage {
-			line-height: 55px;
-		}
-
-		.up-history {
-			width: 100%;
-			height: 160px;
-			line-height: 55px;
-
-			.up-history-ul {
-				width: 60%;
-				float: right;
-				margin: 10px 0 0 0;
-				padding: 0;
-
-				.up-history-li {
-					padding: 0;
-					margin: 0;
-					width: 100%;
-					display: inline-block;
-					height: 32px;
-					line-height: 32px;
-					border-bottom: 1px solid @default-gray;
-
-					a {
+					.up-button {
 						display: inline-block;
+						padding: 0 15px 0 0;
+						border: 1px solid @default-yellow;
+						background: #fff;
+						color: #000;
+						border-radius: 4px;
+						margin-bottom: 10px;
 
-						&:hover {
-							color: @default-yellow;
+						span {
+							background: @default-yellow;
+							display: inline-block;
+							padding: 0 15px;
+							color: #fff;
+							font-weight: bold;
+							margin-right: 10px;
 						}
 					}
 
-					span {
-						margin-left: 22px;
+					.up-msg-info {
+						font-size: 12px;
+						color: #777;
+					}
+				}
+			}
+
+			.up-progress {
+				width: 100%;
+				height: 55px;
+				border-bottom: 1px solid #ccc;
+				color: #555;
+				line-height: 48px;
+				position: relative;
+
+				&:hover {
+					.progress .progress-bar {
+						background-color: @default-yellow;
+					}
+
+					.up-count {
+						color: @default-yellow;
+					}
+				}
+
+				.up-date {
+					font-size: 14px;
+					position: absolute;
+					margin: 0;
+					padding: 0;
+					top: -6px;
+					left: 38%;
+					height: 14px;
+				}
+
+				.progress {
+					width: 50%;
+					height: 8px;
+					display: inline-block;
+					position: absolute;
+					top: 30px;
+					right: 60px;
+
+					.progress-bar {
+						background-color: #808080;
+						border-radius: 10px;
+					}
+				}
+
+				.up-count {
+					float: right;
+					color: #555;
+					font-size: 30px;
+				}
+
+				.count-coverage {
+					font-size: 22px;
+				}
+			}
+
+			.progress-coverage {
+				line-height: 55px;
+			}
+
+			.up-history {
+				width: 100%;
+				height: 160px;
+				line-height: 55px;
+
+				.up-history-ul {
+					width: 60%;
+					float: right;
+					margin: 10px 0 0 0;
+					padding: 0;
+
+					.up-history-li {
+						padding: 0;
+						margin: 0;
+						width: 100%;
+						display: inline-block;
+						height: 32px;
+						line-height: 32px;
+						border-bottom: 1px solid @default-gray;
+
+						a {
+							display: inline-block;
+
+							&:hover {
+								color: @default-yellow;
+							}
+						}
+
+						span {
+							margin-left: 22px;
+						}
 					}
 				}
 			}
 		}
 	}
+
+	.up-tabs {
+
+		.up-tabs-top {
+			width: 100%;
+			text-align: center;
+
+			.up-link-top {
+				display: inline-block;
+				width: 29%;
+				margin: 20px 2% 10px;
+				height: 58px;
+				line-height: 60px;
+				background: @default-yellow;
+				color: #000;
+				text-align: center;
+				float: left;
+				font-size: 24px;
+				position: relative;
+
+				.up-circle {
+					position: absolute;
+					top: 10px;
+					right: 20px;
+					display: inline-block;
+					width: 24px;
+					height: 24px;
+					border: 4px solid #ffffff;
+					border-radius: 50%;
+				}
+
+				.up-x {
+					position: relative;
+					display: inline-block;
+					width: 40px;
+					height: 40px;
+					margin: 0 2px;
+					top: -2px;
+
+					img {
+						width: 100%;
+						height: 100%;
+					}
+				}
+			}
+		}
+
+		.up-tabs-bottom {
+			width: 100%;
+			text-align: center;
+			float: left;
+			margin-bottom: 30px;
+
+			.up-bottom-link {
+				display: inline-block;
+				width: 29%;
+				margin: 8px 2%;
+				height: 58px;
+				line-height: 60px;
+				background: #fff;
+				color: #000;
+				text-align: center;
+				float: left;
+				font-size: 24px;
+				position: relative;
+
+				&:hover {
+					background: #000;
+					color: @default-yellow;
+					text-decoration: underline;
+				}
+			}
+		}
+	}
+
+	.up-bg {
+		position: absolute;
+		width: 100%;
+		height: 300px;
+		bottom: 350px;
+		background: url("../images/price/bg.jpg") no-repeat;
+		background-size: cover;
+		z-index: -1;
+	}
 }
 
+
 @media (min-width: @screen-xs) and (max-width: 980px){
-	.up-ul .up-il {
+	#apple .up-ul .up-il {
 		width: 100%;
 
 		.up-info {
