--- a/client/less/update.less
+++ b/client/less/update.less
@@ -181,6 +181,7 @@
 						height: 32px;
 						line-height: 32px;
 						border-bottom: 1px solid @default-gray;
+						position: relative;
 
 						a {
 							display: inline-block;
@@ -191,7 +192,9 @@
 						}
 
 						span {
-							margin-left: 22px;
+							right: 0;
+							position: absolute;
+							top: 0;
 						}
 					}
 				}
